# CPPReinforcementLearning

./: .gitignore  CMakeLists.txt
FeedforwardNet/: brain.cpp  brain.h  layer.cpp  layer.h  network.cpp  network.h  neuron.cpp  neuron.h  qlearn.cpp  test.cpp
Tests/MNIST/: mnist.cpp
